# vl53l0x-esp-idf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_RU.md  idf_component.yml
examples/continuous_ranging/: CMakeLists.txt
examples/continuous_ranging/main/: main.c
examples/continuous_timed/: CMakeLists.txt
examples/continuous_timed/main/: main.c
examples/manual_polling/: CMakeLists.txt
examples/manual_polling/main/: idf_component.yml  main.c
examples/single_ranging/: CMakeLists.txt
examples/single_ranging/main/: CMakeLists.txt  main.c
examples/single_ranging_interrupt/: CMakeLists.txt
examples/single_ranging_interrupt/main/: main.c
examples/threshold_interrupt/: CMakeLists.txt
examples/threshold_interrupt/main/: main.c
include/: vl53l0x.h  vl53l0x_def.h
private/core/inc/: vl53l0x_api_strings.h
private/core/src/: vl53l0x_api.c  vl53l0x_api_core.c
private/platform/inc/: vl53l0x_i2c_platform.h  vl53l0x_platform.h  vl53l0x_platform_log.h  vl53l0x_types.h
private/platform/src/: vl53l0x_i2c_platform.c  vl53l0x_platform.c  vl53l0x_platform_log.c
src/: vl53l0x.c
